k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-api
spec:
  selector: { app: sms-api }
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
